[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "muon"
author = "Danila Bredikhin"
author-email = "danila.bredikhin@embl.de"
description-file = "README.md"
home-page = "https://github.com/scverse/muon"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Intended Audience :: Science/Research"
]
requires-python = ">= 3.8"
requires = [
    "numpy",
    "pandas",
    "matplotlib",
    "seaborn",
    "h5py",
    "anndata",
    "scanpy",
    "scikit-learn",
    "umap-learn",
    "numba",
    "protobuf",
    "tqdm",
    "mudata",
]

[tool.flit.metadata.requires-extra]
docs = [
    "sphinx >= 4.0",
    "pydata-sphinx-theme==0.8.1",
    "sphinx-book-theme==0.3.3",
    "readthedocs-sphinx-search",
    "nbsphinx",
    "sphinx_automodapi"
]
atac = [
    "pybedtools",
    "pysam"
]

[tool.flit.metadata.urls]
Documentation = "https://muon.readthedocs.io/en/latest/"

[tool.flit.sdist]
exclude = [".github", "docs/build"]


[tool.black]
line-length = 100
target-version = ['py37']
